--- a/.aigne/web-smith/pages/workspace/en/home.yaml
+++ b/.aigne/web-smith/pages/workspace/en/home.yaml
@@ -1,115 +1,97 @@
 meta:
-  title: "AIGNE DocSmith | AI-Powered Documentation Generation for Your Codebase"
-  description: "Instantly generate, translate, and publish comprehensive documentation with AIGNE DocSmith. Our AI understands your code to create accurate, multi-language docs that stay automatically updated. Get started in minutes!"
+  title: "AIGNE DocSmith: AI-Powered Documentation that Understands Your Code"
+  description: "Generate comprehensive, multi-language documentation automatically with AIGNE DocSmith. Our AI analyzes your code to create docs that are always up-to-date. Try it now!"
+  image: "mediakit://doc-regenerate.png"
 sections:
   - sectionName: "Hero"
-    sectionSummary: "A powerful, attention-grabbing introduction that immediately states the core value proposition of AI-driven documentation, paired with a dynamic visual and clear calls-to-action to get users started or explore the code."
-    splitHeroTitle: "AI-Powered Documentation That Understands Your Code"
-    splitHeroDescription: "AIGNE DocSmith automatically analyzes your codebase to generate comprehensive, structured, and multi-language documentation that always stays in sync. Stop writing docs, start shipping code!"
+    sectionSummary: "Introduces AIGNE DocSmith with a powerful headline, a clear value proposition, and prominent calls-to-action to get started or learn more, paired with a compelling visual of the tool in action."
+    splitHeroTitle: "Documentation That Writes Itself"
+    splitHeroDescription: "AIGNE DocSmith uses AI to analyze your codebase and automatically generate comprehensive, structured, and multi-language documentation. Keep your docs perfectly in sync with your code, effortlessly."
     splitHeroActions:
       - text: "Get Started Now"
         link: "link:///quick-start"
-      - text: "View on GitHub"
-        link: "https://github.com/AIGNE-io/aigne-doc-smith"
-    splitHeroRightImage: "mediakit://hero-docsmith-landing.png"
-  - sectionName: "WhyDocSmith"
-    sectionSummary: "This section presents the five core benefits of DocSmith in a visually engaging bento grid, making it easy for users to quickly scan and understand the key advantages like intelligent analysis and zero-config setup."
+      - text: "View Features"
+        link: "link:///features"
+    splitHeroRightImage: "mediakit://doc-regenerate.png"
+  - sectionName: "KeyBenefits"
+    sectionSummary: "Highlights the three core benefits of DocSmith in a scannable, three-column grid. Each card uses an icon to visually represent the benefit, making the value proposition easy to digest."
+    threeColumnGridTitle: "Why You'll Love DocSmith"
     list:
-      - sectionName: "IntelligentAnalysis"
-        sectionSummary: "Highlights the AI's ability to understand code deeply, creating logical and insightful documentation."
+      - sectionName: "IntelligentAnalysisCard"
+        sectionSummary: "Benefit card explaining the AI's deep understanding of code."
         iconName: "lucide:brain-circuit"
         cardTitle: "Intelligent Analysis"
-        cardDescription: "Goes beyond keywords to understand your code structure, patterns, and intent, creating docs that truly make sense."
-      - sectionName: "ComprehensiveCoverage"
-        sectionSummary: "Communicates that DocSmith generates all necessary documentation, from API references to full user guides."
-        iconName: "lucide:book-open-check"
-        cardTitle: "Comprehensive Coverage"
-        cardDescription: "From API references to complete user guides, get all the documentation you need without lifting a finger."
-      - sectionName: "GlobalReady"
-        sectionSummary: "Showcases the powerful multi-language support, emphasizing professional, context-aware translation to reach a worldwide audience."
+        cardDescription: "Our AI doesn't just read your code—it understands its structure, patterns, and intent to create truly meaningful docs."
+      - sectionName: "GlobalReadyCard"
+        sectionSummary: "Benefit card highlighting the multi-language translation capabilities."
         iconName: "lucide:globe"
         cardTitle: "Global Ready"
-        cardDescription: "Launch for a worldwide audience with professional, context-aware translation support for 12 languages."
-      - sectionName: "AlwaysCurrent"
-        sectionSummary: "Emphasizes the tool's ability to automatically detect code changes and keep the documentation perfectly in sync."
-        iconName: "lucide:refresh-cw"
+        cardDescription: "Instantly translate your documentation into 12 languages with professional, context-aware AI translation."
+      - sectionName: "AlwaysCurrentCard"
+        sectionSummary: "Benefit card emphasizing the automatic update feature to keep docs in sync."
+        iconName: "lucide:git-pull-request-arrow"
         cardTitle: "Always Current"
-        cardDescription: "Automatically detects your code changes and updates the relevant documentation, so your docs are never out of date."
-      - sectionName: "ZeroConfig"
-        sectionSummary: "Highlights the ease of use, explaining that DocSmith works instantly with smart defaults and auto-detection."
-        iconName: "lucide:zap"
-        cardTitle: "Zero Config"
-        cardDescription: "Works right out of the box! Smart defaults and auto-detection mean you can generate amazing docs in seconds."
-  - sectionName: "HowItWorks"
-    sectionSummary: "A dynamic, action-oriented section that uses terminal playback animations to demonstrate the core workflow of DocSmith—generating, updating, translating, and publishing—making the process feel tangible and exciting."
+        cardDescription: "DocSmith automatically detects code changes and updates your documentation, so it's never out of sync."
+  - sectionName: "ProductDemo"
+    sectionSummary: "A dynamic, multi-step showcase of the DocSmith workflow using alternating terminal players. This section demonstrates the core commands—generate, update, translate, and publish—to give users a tangible feel for the product."
     oneColumnGridTitle: "See It In Action: From Code to Docs in Minutes"
     list:
-      - sectionName: "GenerateDocs"
-        sectionSummary: "Visual demonstration of the initial documentation generation command, showing users how easy it is to get started."
-        contentCardTitle: "1. Generate Your First Docs"
-        contentCardDescription: "Run one command to auto-detect your project, analyze your code, and generate comprehensive documentation from scratch."
-        contentCardBottomCode:
-          name: "generate.json"
-          content: "aigne doc generate"
-      - sectionName: "UpdateDocs"
-        sectionSummary: "Shows the seamless update process, highlighting how DocSmith keeps documentation fresh as code evolves."
-        contentCardTitle: "2. Keep Docs Fresh, Effortlessly"
-        contentCardDescription: "As your code changes, intelligently update only the relevant sections of your documentation with a simple command."
-        contentCardBottomCode:
-          name: "update.json"
-          content: "aigne doc update"
-      - sectionName: "TranslateDocs"
-        sectionSummary: "Demonstrates the one-command translation feature, emphasizing the power to go global instantly."
-        contentCardTitle: "3. Go Global with One Command"
-        contentCardDescription: "Instantly translate your docs into 12 languages with professional, context-aware AI to reach a worldwide audience."
-        contentCardBottomCode:
-          name: "translate.json"
-          content: "aigne doc translate"
-      - sectionName: "PublishDocs"
-        sectionSummary: "Concludes the workflow by showing the publishing step, giving users a clear path from generation to live documentation."
-        contentCardTitle: "4. Publish and Share Instantly"
-        contentCardDescription: "Make your documentation live on the DocSmith Cloud or your own platform, and share it with your team in seconds."
-        contentCardBottomCode:
-          name: "publish.json"
-          content: "aigne doc publish"
-  - sectionName: "FeatureHighlights"
-    sectionSummary: "This section dives deeper into four key feature areas using a two-column grid of image cards, providing more detail and visual proof for capabilities like AI generation, translation, LLM integration, and publishing."
-    twoColumnGridTitle: "Powerful Features, Simple Workflow"
-    list:
-      - sectionName: "AiPoweredGeneration"
-        sectionSummary: "Focuses on the smart structure planning and content creation, reinforced by a screenshot of the generated document structure."
-        contentCardTitle: "AI-Powered Generation"
-        contentCardDescription: "Our AI analyzes your codebase to create a logical structure and generates detailed, contextual content that explains both the 'what' and the 'why'."
-        contentCardBottomImage: "mediakit://doc-generate-docs.png"
-      - sectionName: "MultiLanguageExcellence"
-        sectionSummary: "Highlights the professional, context-aware translation for 12 languages, supported by a visual of the language selection UI."
-        contentCardTitle: "Multi-Language Excellence"
-        contentCardDescription: "Reach a global audience with professional, context-aware translation that maintains technical accuracy across 12 languages."
-        contentCardBottomImage: "mediakit://doc-translate-langs.png"
-      - sectionName: "SeamlessIntegration"
-        sectionSummary: "Explains the flexibility of using AIGNE Hub or custom API keys for various LLMs, showing the model configuration screen."
-        contentCardTitle: "Seamless LLM Integration"
-        contentCardDescription: "Use AIGNE Hub out-of-the-box for easy model switching, or bring your own API keys for providers like OpenAI, Google, and Anthropic."
-        contentCardBottomImage: "mediakit://doc-generate.png"
-      - sectionName: "OneClickPublishing"
-        sectionSummary: "Showcases the easy publishing options, with a screenshot of the platform selection prompt to make the benefit tangible."
-        contentCardTitle: "One-Click Publishing"
-        contentCardDescription: "Make your docs live instantly! Publish to the free DocSmith Cloud for easy hosting or deploy to your own custom Discuss Kit instance."
-        contentCardBottomImage: "mediakit://doc-publish.png"
-  - sectionName: "EnterpriseReady"
-    sectionSummary: "This section speaks directly to business users, summarizing enterprise-grade features and providing a clear call-to-action to explore the dedicated enterprise page, building confidence for production use."
-    featureSectionTitle: "Built for Teams and Production Workflows"
-    featureSectionDescription: "DocSmith offers enterprise-grade features including team collaboration, custom branding, API integration, and private cloud deployment to fit your security and compliance needs."
+      - sectionName: "GenerateDemo"
+        sectionSummary: "Demonstrates the initial 'generate' command with a terminal playback on the left and descriptive text on the right."
+        terminalPlaybackData: "@generate.json"
+        terminalLeft:
+          title: "aigne doc generate"
+          description: "One command is all it takes. DocSmith auto-detects your project, asks a few simple questions, and generates a complete documentation set from scratch."
+          actionTitle: "Learn How to Generate"
+          actionLink: "link:///quick-start"
+      - sectionName: "UpdateDemo"
+        sectionSummary: "Shows the 'update' command in action, with the terminal playback on the right to create visual rhythm."
+        terminalPlaybackData: "@update.json"
+        terminalRight:
+          title: "aigne doc update"
+          description: "Need to refine a section? Interactively select documents and provide feedback. The AI will intelligently rewrite and improve the content."
+          actionTitle: ""
+          actionLink: ""
+      - sectionName: "TranslateDemo"
+        sectionSummary: "Highlights the 'translate' command, continuing the alternating layout with the terminal playback on the left."
+        terminalPlaybackData: "@translate.json"
+        terminalLeft:
+          title: "aigne doc translate"
+          description: "Go global in seconds. Select your target languages and let our AI handle the professional, context-aware translation."
+          actionTitle: ""
+          actionLink: ""
+      - sectionName: "PublishDemo"
+        sectionSummary: "Concludes the demo by showcasing the 'publish' command, with the terminal playback on the right."
+        terminalPlaybackData: "@publish.json"
+        terminalRight:
+          title: "aigne doc publish"
+          description: "Ready to go live? Publish your docs with a single command to DocSmith Cloud or your own custom platform."
+          actionTitle: ""
+          actionLink: ""
+  - sectionName: "LanguageFeatures"
+    sectionSummary: "Spotlights the multi-language support with a clear headline, descriptive text, and a relevant screenshot, reinforced by a CTA to explore all features."
+    featureSectionTitle: "Speak to a Global Audience"
+    featureSectionDescription: "DocSmith provides professional, context-aware translation for 12 languages, powered by the world's leading AI models. From Chinese to Arabic, your documentation will be ready for a worldwide audience."
     featureSectionAction:
-      text: "Explore Enterprise Features"
-      link: "link:///enterprise"
-    featureSectionBottomImage: "mediakit://doc-complete-setup.png"
-  - sectionName: "FinalCta"
-    sectionSummary: "A final, high-energy call-to-action that encourages users to take the next step, whether it's starting the quick start guide or joining the community, leaving them excited and ready to engage."
-    ctaTitle: "Ready to Revolutionize Your Documentation?"
-    ctaDescription: "Stop writing docs by hand. Let AIGNE DocSmith do the heavy lifting so you can get back to what you do best—building amazing things."
+      text: "Explore All Features"
+      link: "link:///features"
+    featureSectionBottomImage: "mediakit://doc-translate-langs.png"
+  - sectionName: "EnterpriseCallout"
+    sectionSummary: "A targeted call-to-action for enterprise users, briefly outlining key business features and directing them to the dedicated enterprise page for more information."
+    ctaTitle: "Built for Teams and Enterprises"
+    ctaDescription: "Need more power? DocSmith offers team collaboration, custom branding, API integration, and private cloud deployments for enterprise-grade documentation workflows."
+    ctaImage: "mediakit://doc-publish.png"
     cta:
-      - text: "Start the Quick Start Guide"
+      - text: "Learn About Enterprise"
+        link: "link:///enterprise"
+      - text: ""
+        link: ""
+  - sectionName: "FinalCta"
+    sectionSummary: "A final, high-energy call-to-action to encourage immediate user conversion. It prompts users to install the CLI and get started, with a secondary option to join the community."
+    ctaTitle: "Ready to Ditch Manual Docs?"
+    ctaDescription: "Stop writing documentation and start generating it. Install the AIGNE CLI and create your first docset in minutes. It's free to get started!"
+    cta:
+      - text: "Start Your Free Trial"
         link: "link:///quick-start"
       - text: "Join the Community"
         link: "link:///community"
