--- a/agents/update/generate-document.yaml
+++ b/agents/update/generate-document.yaml
@@ -8,6 +8,7 @@ instructions:
   - role: user
     url: ../../prompts/detail/generate/user-prompt.md
 auto_reorder_system_messages: true
+auto_merge_system_messages: true
 input_schema:
   type: object
   properties:
@@ -57,6 +58,7 @@ afs:
         description: |
           Codebase of the project to be documented used as context for document generation,
           should search and read as needed while generating document content
+keep_text_in_tool_uses: false
 skills:
   - type: team
     task_render_mode: collapse
