--- a/package.json
+++ b/package.json
@@ -58,11 +58,13 @@
     "marked-terminal": "^7.3.0",
     "mermaid": "^11.9.0",
     "open": "^10.2.0",
+    "p-limit": "^7.1.1",
     "p-map": "^7.0.3",
     "p-retry": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "remark-lint": "^10.0.1",
     "remark-parse": "^11.0.0",
+    "slugify": "^1.6.6",
     "terminal-link": "^4.0.0",
     "ufo": "^1.6.1",
     "unified": "^11.0.5",
