fix(branding): clarify branding update prompts and improve error logging

--- a/agents/publish/index.yaml
+++ b/agents/publish/index.yaml
@@ -18,4 +18,4 @@ input_schema:
       description: Website URL where docs will be published (optional - leave empty for interactive setup)
     with-branding:
       type: boolean
-      description: publish to website with branding
+      description: Update your website branding (title, description, logo)
