feat(branding): support updating branding information during publish doc (#190)
* feat(branding): support updating branding information during publish doc

* fix(publish-docs): ensure checkoutId is saved correctly during document publishing

* feat(branding): enhance branding update functionality with origin checks and improved logging

* fix(branding): clarify branding update prompts and improve error logging

* refactor(file-utils): centralize MIME type handling with a shared mapping and improve getMimeType function

* refactor(blocklet): remove unused getBlockletMetaDid function to streamline code

---------

Co-authored-by: Pengfei <zhupengfei@arcblock.io>

--- a/agents/publish/index.yaml
+++ b/agents/publish/index.yaml
@@ -16,3 +16,6 @@ input_schema:
     appUrl:
       type: string
       description: Website URL where docs will be published (optional - leave empty for interactive setup)
+    with-branding:
+      type: boolean
+      description: Update your website branding (title, description, logo)
