--- a/.aigne/web-smith/pages/workspace/en/home.yaml
+++ b/.aigne/web-smith/pages/workspace/en/home.yaml
@@ -1,97 +1,106 @@
-meta:
-  title: "AIGNE DocSmith: AI-Powered Documentation that Understands Your Code"
-  description: "Generate comprehensive, multi-language documentation automatically with AIGNE DocSmith. Our AI analyzes your code to create docs that are always up-to-date. Try it now!"
-  image: "mediakit://doc-regenerate.png"
-sections:
-  - sectionName: "Hero"
-    sectionSummary: "Introduces AIGNE DocSmith with a powerful headline, a clear value proposition, and prominent calls-to-action to get started or learn more, paired with a compelling visual of the tool in action."
-    splitHeroTitle: "Documentation That Writes Itself"
-    splitHeroDescription: "AIGNE DocSmith uses AI to analyze your codebase and automatically generate comprehensive, structured, and multi-language documentation. Keep your docs perfectly in sync with your code, effortlessly."
-    splitHeroActions:
-      - text: "Get Started Now"
-        link: "link:///quick-start"
-      - text: "View Features"
-        link: "link:///features"
-    splitHeroRightImage: "mediakit://doc-regenerate.png"
-  - sectionName: "KeyBenefits"
-    sectionSummary: "Highlights the three core benefits of DocSmith in a scannable, three-column grid. Each card uses an icon to visually represent the benefit, making the value proposition easy to digest."
-    threeColumnGridTitle: "Why You'll Love DocSmith"
-    list:
-      - sectionName: "IntelligentAnalysisCard"
-        sectionSummary: "Benefit card explaining the AI's deep understanding of code."
-        iconName: "lucide:brain-circuit"
-        cardTitle: "Intelligent Analysis"
-        cardDescription: "Our AI doesn't just read your code—it understands its structure, patterns, and intent to create truly meaningful docs."
-      - sectionName: "GlobalReadyCard"
-        sectionSummary: "Benefit card highlighting the multi-language translation capabilities."
-        iconName: "lucide:globe"
-        cardTitle: "Global Ready"
-        cardDescription: "Instantly translate your documentation into 12 languages with professional, context-aware AI translation."
-      - sectionName: "AlwaysCurrentCard"
-        sectionSummary: "Benefit card emphasizing the automatic update feature to keep docs in sync."
-        iconName: "lucide:git-pull-request-arrow"
-        cardTitle: "Always Current"
-        cardDescription: "DocSmith automatically detects code changes and updates your documentation, so it's never out of sync."
-  - sectionName: "ProductDemo"
-    sectionSummary: "A dynamic, multi-step showcase of the DocSmith workflow using alternating terminal players. This section demonstrates the core commands—generate, update, translate, and publish—to give users a tangible feel for the product."
-    oneColumnGridTitle: "See It In Action: From Code to Docs in Minutes"
-    list:
-      - sectionName: "GenerateDemo"
-        sectionSummary: "Demonstrates the initial 'generate' command with a terminal playback on the left and descriptive text on the right."
-        terminalPlaybackData: "@generate.json"
-        terminalLeft:
-          title: "aigne doc generate"
-          description: "One command is all it takes. DocSmith auto-detects your project, asks a few simple questions, and generates a complete documentation set from scratch."
-          actionTitle: "Learn How to Generate"
-          actionLink: "link:///quick-start"
-      - sectionName: "UpdateDemo"
-        sectionSummary: "Shows the 'update' command in action, with the terminal playback on the right to create visual rhythm."
-        terminalPlaybackData: "@update.json"
-        terminalRight:
-          title: "aigne doc update"
-          description: "Need to refine a section? Interactively select documents and provide feedback. The AI will intelligently rewrite and improve the content."
-          actionTitle: ""
-          actionLink: ""
-      - sectionName: "TranslateDemo"
-        sectionSummary: "Highlights the 'translate' command, continuing the alternating layout with the terminal playback on the left."
-        terminalPlaybackData: "@translate.json"
-        terminalLeft:
-          title: "aigne doc translate"
-          description: "Go global in seconds. Select your target languages and let our AI handle the professional, context-aware translation."
-          actionTitle: ""
-          actionLink: ""
-      - sectionName: "PublishDemo"
-        sectionSummary: "Concludes the demo by showcasing the 'publish' command, with the terminal playback on the right."
-        terminalPlaybackData: "@publish.json"
-        terminalRight:
-          title: "aigne doc publish"
-          description: "Ready to go live? Publish your docs with a single command to DocSmith Cloud or your own custom platform."
-          actionTitle: ""
-          actionLink: ""
-  - sectionName: "LanguageFeatures"
-    sectionSummary: "Spotlights the multi-language support with a clear headline, descriptive text, and a relevant screenshot, reinforced by a CTA to explore all features."
-    featureSectionTitle: "Speak to a Global Audience"
-    featureSectionDescription: "DocSmith provides professional, context-aware translation for 12 languages, powered by the world's leading AI models. From Chinese to Arabic, your documentation will be ready for a worldwide audience."
-    featureSectionAction:
-      text: "Explore All Features"
-      link: "link:///features"
-    featureSectionBottomImage: "mediakit://doc-translate-langs.png"
-  - sectionName: "EnterpriseCallout"
-    sectionSummary: "A targeted call-to-action for enterprise users, briefly outlining key business features and directing them to the dedicated enterprise page for more information."
-    ctaTitle: "Built for Teams and Enterprises"
-    ctaDescription: "Need more power? DocSmith offers team collaboration, custom branding, API integration, and private cloud deployments for enterprise-grade documentation workflows."
-    ctaImage: "mediakit://doc-publish.png"
-    cta:
-      - text: "Learn About Enterprise"
-        link: "link:///enterprise"
-      - text: ""
-        link: ""
-  - sectionName: "FinalCta"
-    sectionSummary: "A final, high-energy call-to-action to encourage immediate user conversion. It prompts users to install the CLI and get started, with a secondary option to join the community."
-    ctaTitle: "Ready to Ditch Manual Docs?"
-    ctaDescription: "Stop writing documentation and start generating it. Install the AIGNE CLI and create your first docset in minutes. It's free to get started!"
-    cta:
-      - text: "Start Your Free Trial"
-        link: "link:///quick-start"
-      - text: "Join the Community"
-        link: "link:///community"
+"meta":
+  "title": "AIGNE DocSmith: AI-Powered Documentation that Understands Your Code"
+  "description": "Generate comprehensive, multi-language documentation automatically with AIGNE DocSmith. Our AI analyzes your code to create docs that are always up-to-date. Try it now!"
+  "image": "mediakit://doc-regenerate.png"
+"sections":
+  - "sectionName": "Hero"
+    "sectionSummary": "Introduces AIGNE DocSmith with a powerful headline, a clear value proposition, and prominent calls-to-action to get started or learn more, paired with a compelling visual of the tool in action."
+    "splitHeroTitle": "Documentation That Writes Itself"
+    "splitHeroDescription": "AIGNE DocSmith uses AI to analyze your codebase and automatically generate comprehensive, structured, and multi-language documentation. Keep your docs perfectly in sync with your code, effortlessly."
+    "splitHeroActions":
+      - "text": "Get Started Now"
+        "link": "link:///quick-start"
+      - "text": "View Features"
+        "link": "link:///features"
+    "splitHeroRightImage": "mediakit://doc-regenerate.png"
+  - "sectionName": "KeyBenefits"
+    "sectionSummary": "Highlights the three core benefits of DocSmith in a scannable, three-column grid. Each card uses an icon to visually represent the benefit, making the value proposition easy to digest."
+    "threeColumnGridTitle": "Why You'll Love DocSmith"
+    "list":
+      - "sectionName": "IntelligentAnalysisCard"
+        "sectionSummary": "Benefit card explaining the AI's deep understanding of code."
+        "featureSectionTitle": "Intelligent Analysis"
+        "featureSectionDescription": "Our AI doesn't just read your code—it understands its structure, patterns, and intent to create truly meaningful docs."
+        "featureSectionBottomImage": "https://placehold.co/600x400?text=AI"
+        "featureSectionAction":
+          "text": "Learn More"
+          "link": "https://www.arcblock.io/"
+      - "sectionName": "GlobalReadyCard"
+        "sectionSummary": "Benefit card highlighting the multi-language translation capabilities."
+        "featureSectionTitle": "Global Ready"
+        "featureSectionDescription": "Instantly translate your documentation into 12 languages with professional, context-aware AI translation."
+        "featureSectionBottomImage": "https://placehold.co/600x400?text=Global"
+        "featureSectionAction":
+          "text": "See Features"
+          "link": "link:///features"
+      - "sectionName": "AlwaysCurrentCard"
+        "sectionSummary": "Benefit card emphasizing the automatic update feature to keep docs in sync."
+        "featureSectionTitle": "Always Current"
+        "featureSectionDescription": "DocSmith automatically detects code changes and updates your documentation, so it's never out of sync."
+        "featureSectionBottomImage": "https://placehold.co/600x400?text=Sync"
+        "featureSectionAction":
+          "text": "Get Started"
+          "link": "link:///quick-start"
+  - "sectionName": "ProductDemo"
+    "sectionSummary": "A dynamic, multi-step showcase of the DocSmith workflow using alternating terminal players. This section demonstrates the core commands—generate, update, translate, and publish—to give users a tangible feel for the product."
+    "oneColumnGridTitle": "See It In Action: From Code to Docs in Minutes"
+    "list":
+      - "sectionName": "GenerateDemo"
+        "sectionSummary": "Demonstrates the initial 'generate' command with a terminal playback on the left and descriptive text on the right."
+        "terminalPlaybackData": "@generate.json"
+        "terminalLeft":
+          "title": "aigne doc generate"
+          "description": "One command is all it takes. DocSmith auto-detects your project, asks a few simple questions, and generates a complete documentation set from scratch."
+          "actionTitle": "Learn How to Generate"
+          "actionLink": "link:///quick-start"
+      - "sectionName": "UpdateDemo"
+        "sectionSummary": "Shows the 'update' command in action, with the terminal playback on the right to create visual rhythm."
+        "terminalPlaybackData": "@update.json"
+        "terminalRight":
+          "title": "aigne doc update"
+          "description": "Need to refine a section? Interactively select documents and provide feedback. The AI will intelligently rewrite and improve the content."
+          "actionTitle": ""
+          "actionLink": ""
+      - "sectionName": "TranslateDemo"
+        "sectionSummary": "Highlights the 'translate' command, continuing the alternating layout with the terminal playback on the left."
+        "terminalPlaybackData": "@translate.json"
+        "terminalLeft":
+          "title": "aigne doc translate"
+          "description": "Go global in seconds. Select your target languages and let our AI handle the professional, context-aware translation."
+          "actionTitle": ""
+          "actionLink": ""
+      - "sectionName": "PublishDemo"
+        "sectionSummary": "Concludes the demo by showcasing the 'publish' command, with the terminal playback on the right."
+        "terminalPlaybackData": "@publish.json"
+        "terminalRight":
+          "title": "aigne doc publish"
+          "description": "Ready to go live? Publish your docs with a single command to DocSmith Cloud or your own custom platform."
+          "actionTitle": "Learn About Publishing"
+          "actionLink": "https://docsmith.aigne.io/docs/aigne-web-smith/en/core-tasks-publishing-your-website-c47353"
+  - "sectionName": "LanguageFeatures"
+    "sectionSummary": "Spotlights the multi-language support with a clear headline, descriptive text, and a relevant screenshot, reinforced by a CTA to explore all features."
+    "featureSectionTitle": "Speak to a Global Audience"
+    "featureSectionDescription": "DocSmith provides professional, context-aware translation for 12 languages, powered by the world's leading AI models. From Chinese to Arabic, your documentation will be ready for a worldwide audience."
+    "featureSectionAction":
+      "text": "Explore All Features"
+      "link": "link:///features"
+    "featureSectionBottomImage": "mediakit://doc-translate-langs.png"
+  - "sectionName": "EnterpriseCallout"
+    "sectionSummary": "A targeted call-to-action for enterprise users, briefly outlining key business features and directing them to the dedicated enterprise page for more information."
+    "ctaTitle": "Built for Teams and Enterprises"
+    "ctaDescription": "Need more power? DocSmith offers team collaboration, custom branding, API integration, and private cloud deployments for enterprise-grade documentation workflows."
+    "ctaImage": "mediakit://doc-publish.png"
+    "cta":
+      - "text": "Learn About Enterprise"
+        "link": "link:///enterprise"
+      - "text": ""
+        "link": ""
+  - "sectionName": "FinalCta"
+    "sectionSummary": "A final, high-energy call-to-action to encourage immediate user conversion. It prompts users to install the CLI and get started, with a secondary option to join the community."
+    "ctaTitle": "Ready to Ditch Manual Docs?"
+    "ctaDescription": "Stop writing documentation and start generating it. Install the AIGNE CLI and create your first docset in minutes. It's free to get started!"
+    "cta":
+      - "text": "Start Your Free Trial"
+        "link": "link:///quick-start"
+      - "text": "Join the Community"
+        "link": "link:///community"
